--- a/book-details.css
+++ b/book-details.css
@@ -6,6 +6,7 @@
   padding: 0;
 }
 body {
+  /* font-family: Poppins, Helvetica, sans-serif; */
   font-family: "Public Sans", sans-serif !important;
   padding: 10px;
   background-color: #f5f5f5;
@@ -32,4 +33,32 @@ nav .nav-links {
   display: flex;
   gap: 20px;
   margin-right: 5px;
+}
+
+/* Book details */
+#book-details {
+  margin-top: 20px;
+}
+.book-details-container {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: 1fr 5fr;
+}
+.book-details-container .book-details-left {
+  display: flex;
+  justify-content: center;
+}
+.book-details-container .book-details-left .book-img {
+  border: 1px solid #222121be;
+  color: #575050c8;
+  padding: 25px;
+}
+.book-details-container .book-details-right {
+  ul {
+    margin-left: 30px;
+    margin-top: 5px;
+    li {
+      font-size: 14px;
+    }
+  }
 }
