--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Poppins, Helvetica, sans-serif; */
+  font-family: "Public Sans", sans-serif !important;
   padding: 10px;
   background-color: #f5f5f5;
 }
@@ -30,4 +33,43 @@ nav .nav-links {
   display: flex;
   gap: 20px;
   margin-right: 5px;
+}
+
+/* Books List Section */
+#books-list {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 20px;
+}
+#books-list .book-card {
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: relative;
+}
+.book-card .card-img {
+  width: 100%;
+  max-width: 250px;
+  margin: 0 auto;
+}
+.book-card .card-img img {
+  width: 100%;
+}
+.book-card .title {
+  font-size: 18px;
+}
+.book-card .author {
+  font-size: 14px;
+}
+.book-card .genre {
+  font-size: 14px;
+}
+.book-card .icon {
+  position: absolute;
+  top: 5px;
+  right: 8px;
+  font-size: 25px;
 }
