--- a/wishlist.css
+++ b/wishlist.css
@@ -33,3 +33,68 @@ nav .nav-links {
   gap: 20px;
   margin-right: 5px;
 }
+
+#empty-text {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+/* Wishlist Starts */
+#wishlist-container {
+  margin-top: 20px;
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+#wishlist-container .wishlist-card {
+  background-color: #fff;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: relative;
+}
+.wishlist-card .card-img {
+  width: 100%;
+  max-width: 150px;
+  margin: 0 auto;
+}
+.wishlist-card .card-img img {
+  width: 100%;
+}
+.wishlist-card .title {
+  font-size: 18px;
+}
+.wishlist-card .author {
+  font-size: 14px;
+}
+.wishlist-card .genre {
+  font-size: 14px;
+}
+.wishlist-card .icon {
+  position: absolute;
+  top: 5px;
+  right: 8px;
+  cursor: pointer;
+  /* font-size: 25px; */
+}
+/* Wishlist Ends */
+
+@media only screen and (max-width: 1080px) {
+  #wishlist-container {
+    grid-template-columns: repeat(3, 1fr) !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #wishlist-container {
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media only screen and (max-width: 576px) {
+  #wishlist-container {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+}
